# cpp-llm-chat-client

./: .env  .gitignore  CMakeLists.txt  README.md
docs/: design.md
include/: chat.hpp  http_client.hpp  util_env.hpp  util_log.hpp
src/: chat.cpp  http_client.cpp  main.cpp  util_env.cpp  util_log.cpp
